# nipyapi-actions

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Makefile  README.md  action.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ROADMAP.md  commands.md  development-notes.md  development.md  github-actions.md  github-app-setup.md  gitlab-ci.md  gitops.md  how-it-works.md  security.md  setup.md
scripts/: generate_secrets.py
src/: change_version.py  cleanup.py  configure_params.py  deploy_flow.py  ensure_registry.py  get_status.py  main.py  revert_flow.py  start_flow.py  stop_flow.py  utils.py
templates/: fragments.yml
tests/: local.py
tests/flows/: cicd-demo-flow.json  kinesis-timestamp-mod.json  nipyapi_test_cicd_demo.json  nipyapi_test_param_inheritance.json  param-inheritance-test.json
