[project]
name = "nipyapi-actions"
version = "0.1.0"
description = "CI/CD actions for Apache NiFi flows using nipyapi"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Chaffelson" }
]

dependencies = [
    "nipyapi>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

# Not a distributable package - just scripts
# Tell hatch to not try to find packages to build
[tool.hatch.build.targets.wheel]
packages = []
